--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <label for="message">message</label>
   <!-- Add a textarea tag with the id and name attributes set to 'message' -->
   <!-- Include the place holder text "Enter Message" -->
-  <textarea id="message" name="message" placeholder="Enter Message">
+  <textarea id="message" name="message" placeholder="Enter Message"></textarea>
     <br />
-    
+
     <!-- Add a checkbox input with the id set to 'checkbox' -->
     <input type="checkbox" id="checkbox" value="Want to do business" />Want to do business
     <br />
